--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm run build --if-present
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.3.5
+        uses: JamesIves/github-pages-deploy-action@latest
         with:
           branch: gh-pages
           folder: dist/checkout-app
