--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3  # עדכון לגרסה 3 של setup-node
         with:
-          node-version: '16'
+          node-version: '18'  # הגדרת גרסה 18 או גרסה גבוהה יותר של Node.js
 
       - name: Install dependencies
         run: npm install
