--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # עדכון לגרסה 3 של setup-node
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'  # הגדרת גרסה 18 או גרסה גבוהה יותר של Node.js
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
@@ -28,3 +28,5 @@ jobs:
         with:
           branch: gh-pages
           folder: dist/checkout-app
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  
