--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
           branch: gh-pages
           folder: dist/checkout-app
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # כאן אנחנו משתמשים ב-PAT שלך
