--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,29 +3,29 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main  # הרצת ה-Workflow בעת דחיפת שינויים ל-main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # משיכת קוד מהמאגר
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v3  # הגדרת Node.js
         with:
-          node-version: '18'  # גרסת Node.js
+          node-version: '18'  # גרסת Node.js (לפחות 18)
 
       - name: Install dependencies
-        run: npm install
+        run: npm install  # התקנת חבילות
 
       - name: Build the project
-        run: npm run build --if-present
+        run: npm run build --if-present  # בניית הפרויקט (תיקיית dist)
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.0
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          token: ${{ secrets.PAT_TOKEN }}  # שימוש בטוקן אישי
-          branch: gh-pages
-          folder: dist/checkout-app
+          branch: gh-pages  # הענף לפרסום
+          folder: dist/checkout-app  # התיקייה עם תוצרי הבנייה
+          token: ${{ secrets.PATI_TOKEN }}  # Token אישי לפרסום
